Clean up ClientLocalHistory
Make the class final and use local variable type inference with switch
expressions.

Change-Id: Iedc860899e9bcfda11ded1cf6e8b710f530607e1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>